# xbox-client-vala

./: .gitignore  Dockerfile  README.md  meson.build  run_via_docker.sh
data/: com.github.gffranco.OpenXboxClient.desktop.in.in  com.github.gffranco.OpenXboxClient.gresource.xml  com.github.gffranco.openxboxclient.appdata.xml.in  com.github.gffranco.openxboxclient.gresource.xml  meson.build
data/ui/: login.glade  openxbox.glade  openxbox.ui
data/vapi/: XboxWebApi-1.0.vapi
lib/: XboxWebApi.h
scripts/: update_lib.sh
src/: Application.vala  LoginWindow.vala  MainWindow.vala
subprojects/: libXboxWebApi.wrap
